fix: prevent text overflow in cards

--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,10 @@
   margin-bottom: 1.5rem;
 }
 
-.line-clamp-3{
+.line-clamp{
   display: -webkit-box;
   -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
+  line-clamp: 4;
+  -webkit-box-orient: vertical;  
   overflow: hidden;
 }
